[package]
name = "pow-wasm"
version = "0.1.0-alpha-1"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://mcaptcha.org"
repository = "https://github.com/mCaptcha/pow_wasm"
documentation = "https://mcaptcha.github.io/pow_wasm/pow_wasm/index.html"
description = "WASM port of the proof-of-work library used in mCaptcha "
readme = "README.md"
keywords = ["pow", "mcaptcha", "wasm", "CAPTCHA", "proof-of-work"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1"
js-sys = "0.3.64"

mcaptcha_pow_sha256 = { version = "0.5.0", features = ["incremental"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

#[profile.release]
## Tell `rustc` to optimize for small code size.
#opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
